--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "wad_hw_node",
-  "version": "1.0.0",
-  "description": "Veebirakenduste loomine LTAT.05.004",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MTender/wad_hw_node.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MTender/wad_hw_node/issues"
-  },
-  "homepage": "https://github.com/MTender/wad_hw_node#readme",
-  "dependencies": {
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "lodash": "^4.17.21"
-  }
+    "name": "wad_hw_node",
+    "version": "1.0.0",
+    "description": "Veebirakenduste loomine LTAT.05.004",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/MTender/wad_hw_node.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/MTender/wad_hw_node/issues"
+    },
+    "homepage": "https://github.com/MTender/wad_hw_node#readme",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "ejs": "^3.1.6",
+        "express": "^4.17.1",
+        "lodash": "^4.17.21",
+        "pg": "^8.7.1"
+    }
 }
